--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/panz3r/react-keycloak/issues"
   },
-  "homepage": "https://github.com/panz3r/react-keycloak#readme",
+  "homepage": "https://cate-auth-test.192.171.139.57.nip.io",
   "license": "MIT",
   "keywords": [
     "react",
